[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/sprites/backgrounds/9patch_scroll3.png" type="Texture" id=1]
[ext_resource path="res://resources/EscapeKeyShortcut.tres" type="ShortCut" id=2]
[ext_resource path="res://scenes/panels/CharacterFinder.gd" type="Script" id=3]
[ext_resource path="res://resources/theme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="CharacterFinder" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 710.0
margin_top = 240.0
margin_right = 1210.0
margin_bottom = 840.0
rect_min_size = Vector2( 500, 600 )
texture = ExtResource( 1 )
patch_margin_left = 54
patch_margin_top = 72
patch_margin_right = 88
patch_margin_bottom = 66

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 760.0
margin_top = 294.0
margin_right = 1160.0
margin_bottom = 786.0

[node name="SelectCharacterL" type="Label" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 22.0
text = "Selecciona tu personaje"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 400.0
margin_bottom = 30.0

[node name="BlankSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 400.0
margin_bottom = 64.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="SearchInstructionsL" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 90.0
rect_min_size = Vector2( 400, 0 )
text = "Busca por cronica, jugador o nombre"
align = 1
autowrap = true

[node name="SearchCont" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 122.0

[node name="SearchLine" type="LineEdit" parent="VBoxContainer/SearchCont"]
margin_right = 325.0
margin_bottom = 28.0
size_flags_horizontal = 3
placeholder_text = "Cronica, jugador o nombre de PJ"

[node name="SearchButton" type="Button" parent="VBoxContainer/SearchCont"]
margin_left = 329.0
margin_right = 400.0
margin_bottom = 28.0
text = "Buscar"
flat = true

[node name="PosibleChars" type="ItemList" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 400.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 300 )
items = [ "bla bli", null, false, "blo", null, false ]

[node name="BlankSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 430.0
margin_right = 400.0
margin_bottom = 460.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="ButtonsCont" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 464.0
margin_right = 400.0
margin_bottom = 492.0
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/ButtonsCont"]
margin_left = 98.0
margin_right = 198.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
shortcut = ExtResource( 2 )
text = "Atras"
flat = true

[node name="Ok" type="Button" parent="VBoxContainer/ButtonsCont"]
margin_left = 202.0
margin_right = 302.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
text = "Ok"
flat = true

[node name="GET" type="HTTPRequest" parent="."]
[connection signal="text_entered" from="VBoxContainer/SearchCont/SearchLine" to="." method="search"]
[connection signal="pressed" from="VBoxContainer/SearchCont/SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsCont/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsCont/Ok" to="." method="_on_Ok_pressed"]
[connection signal="request_completed" from="GET" to="." method="_on_GET_request_completed"]
